# welding-dynamics

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/legacy/: v0_single_file_basic.py  v1_single_file_full.py
notebooks/: marangoni_comparison.ipynb  mayavi_interactive_demo.ipynb  pyvista_interactive_demo.ipynb  robot_deployment_scenarios.ipynb  robot_mujoco_validation.ipynb  welding_mongo_ingestion.ipynb  welding_parameter_database_exploration.ipynb
project_data/: ingest_config_mongo.py  ingest_mongo.py
src/welding_dynamics/: __init__.py  config.py  gmaw.py  main.py  main_3d.py  main_vi.py  marangoni.py  robot_mujoco.py  robot_vi.py  short_circuit.py  thermal.py  thermal3d.py  weave.py
src/welding_dynamics/conf/: __init__.py  sim.yaml  sim_3d.yaml  sim_vi.yaml
src/welding_dynamics/conf/material/: aluminum.yaml  carbon_steel.yaml  cast_iron.yaml  stainless_steel.yaml
src/welding_dynamics/conf/model/: contact.yaml  droplet.yaml  droplet_vi.yaml  gmaw.yaml  goldak.yaml  robot.yaml  robot6.yaml  robot6_ur5e.yaml  rosenthal.yaml  short_circuit.yaml
src/welding_dynamics/conf/output/: per_run.yaml  results.yaml
src/welding_dynamics/conf/process/: code_default.yaml  db_median.yaml  db_p10.yaml  db_p90.yaml
src/welding_dynamics/conf/solver/: coarse.yaml  default.yaml  fine.yaml
src/welding_dynamics/conf/weave/: none.yaml  pattern1.yaml  sine.yaml  triangle.yaml
