[project]
name = "welding-dynamics"
version = "1.0.0"
description = "工业焊接(GMAW/MIG)动力学模型: 电弧自调节、熔滴过渡、Rosenthal/Goldak热场、短路过渡/CMT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Welding Dynamics Project" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# 3D 体渲染 (模块 9 Mayavi)。安装较重(VTK/Qt): `uv sync --extra viz`。
# OpenFOAM 导出本身仅依赖 numpy, 不需要本组。
viz = ["mayavi>=4.8"]

[project.scripts]
welding-sim = "welding_dynamics.main:main"
welding-sim-vi = "welding_dynamics.main_vi:main"
welding-sim-3d = "welding_dynamics.main_3d:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/welding_dynamics"]
