[project]
name = "welding-dynamics"
version = "1.0.0"
description = "工业焊接(GMAW/MIG)动力学模型: 电弧自调节、熔滴过渡、Rosenthal/Goldak热场、短路过渡/CMT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Welding Dynamics Project" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# 3D 体渲染 (模块 9 Mayavi)。安装较重(VTK/Qt): `uv sync --extra viz`。
# Mayavi 4.8.x 的 TVTK 代码生成尚不兼容 VTK 9.6.x。
# OpenFOAM 导出本身仅依赖 numpy, 不需要本组。
viz = [
    "mayavi>=4.8",
    "vtk<9.6",
]
# Jupyter 交互式体渲染演示 (notebooks/mayavi_interactive_demo.ipynb)。
# x3d 后端零额外依赖; ipy 后端用到 ipywidgets/ipyevents/ipyvtklink。
notebook = [
    "mayavi>=4.8",
    "vtk<9.6",
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "ipyevents>=2.0",
    "ipyvtklink>=0.2",
]

[project.scripts]
welding-sim = "welding_dynamics.main:main"
welding-sim-vi = "welding_dynamics.main_vi:main"
welding-sim-3d = "welding_dynamics.main_3d:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/welding_dynamics"]
