[project]
name = "welding-dynamics"
version = "1.0.0"
description = "工业焊接(GMAW/MIG)动力学模型: 电弧自调节、熔滴过渡、Rosenthal/Goldak热场、短路过渡/CMT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Welding Dynamics Project" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "trame>=3.13.2",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "vtk>=9.3.1",
]

[project.optional-dependencies]
# 3D 体渲染 (模块 9 PyVista/VTK): `uv sync --extra viz`。
# OpenFOAM 导出本身仅依赖 numpy, 不需要本组。
viz = [
    "pyvista>=0.44",
]
# Jupyter 交互式体渲染演示 (notebooks/pyvista_interactive_demo.ipynb)。
# PyVista 的 trame notebook 后端还需要 trame-vtk / trame-vuetify。
notebook = [
    "pyvista[jupyter]>=0.44",
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "trame-vtk>=2.8.15",
    "trame-vuetify>=2.9.0",
]

[project.scripts]
welding-sim = "welding_dynamics.main:main"
welding-sim-vi = "welding_dynamics.main_vi:main"
welding-sim-3d = "welding_dynamics.main_3d:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/welding_dynamics"]
